Refactor SecurityConfig to change allowedOrigins type and update CORS configuration